# DPNN

./: CMakeLists.txt  LICENSE  README.md
data/: bunny.xyz
src/: dpnn.cpp  main.cpp
